--- a/dressdash/index.html
+++ b/dressdash/index.html
@@ -164,8 +164,14 @@
           title
         </div>
         <div class="content">
-          <div class="button">
-            <span></span>
+          <div class="button button1">
+            <span>1</span>
+          </div>
+          <div class="button button2">
+            <span>2</span>
+          </div>
+          <div class="button button3">
+            <span>3</span>
           </div>
         </div>
       </div>
