--- a/dressdash/index.html
+++ b/dressdash/index.html
@@ -70,7 +70,7 @@
 
     </header>
     <main class="main">
-<!--       <label for="knownonly">
+      <label for="knownonly">
           Show only known devices
         </label>
         <div class="onoffswitch">
@@ -79,7 +79,7 @@
             <span class="onoffswitch-inner"></span>
             <span class="onoffswitch-switch"></span>
           </label>
-        </div> -->
+        </div>
       <div id="notSupported" class="notSupported">
         Sorry, <b>Web Bluetooth</b> is not supported on this device, make sure you're
         running Chrome 56 or later. If you are running linux, make sure you have enabled the
