--- a/dressdash/index.html
+++ b/dressdash/index.html
@@ -145,14 +145,6 @@
           <div></div>
         </div>
       </div>
-      <div class="model3d">
-        <div class="title">
-          title
-        </div>
-        <div class="content">
-          <canvas></canvas>
-        </div>
-      </div>
       <div class="battery-level">
         <div class="title">
           title
@@ -182,7 +174,7 @@
           </div>
         </div>
       </div>
-      <div class="onboard-buttons">
+<!--       <div class="onboard-buttons">
         <div class="title">
           title
         </div>
@@ -202,7 +194,7 @@
             </label>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="roundbutton">
         <div class="buttonpanel">
           <div class="roundbtn">
