--- a/dressdash/index.html
+++ b/dressdash/index.html
@@ -145,7 +145,15 @@
           <div></div>
         </div>
       </div>
-      <div class="battery-level">
+      <div class="model3d">
+        <div class="title">
+          title
+        </div>
+        <div class="content">
+          <canvas></canvas>
+        </div>
+      </div>
+<!--       <div class="battery-level">
         <div class="title">
           title
         </div>
@@ -157,7 +165,7 @@
             100%
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="play-button">
         <div class="title">
           title
@@ -174,14 +182,14 @@
           </div>
         </div>
       </div>
-<!--       <div class="onboard-buttons">
+      <div class="onboard-buttons">
         <div class="title">
           title
         </div>
         <div class="content">
         </div>
       </div>
-      <div class="onboard-switch">
+<!--       <div class="onboard-switch">
         <div class="title">
           title
         </div>
