add board message

--- a/dressdash/index.html
+++ b/dressdash/index.html
@@ -49,8 +49,7 @@
     <div class="lcar head2"></div>
     <div class="lcar head3"></div>
     <ul class="lcar head4 nav">
-      <div class="mobile-nav-head"><div class="close">Close</div></div>
-      <li class="nav-item">Connected to: </li>
+      <li class="nav-item">Connected to: <span id="currentboard"></span></li>
       <li class="nav-item"><button id="butConnect" type="button">Connect</button></li>
     </ul>
     <div class="lcar head6"><span class="menuIcon"><svg viewBox="0 0 100 80" width="20" height="20">
@@ -153,7 +152,7 @@
           <canvas></canvas>
         </div>
       </div>
-<!--       <div class="battery-level">
+      <div class="battery-level">
         <div class="title">
           title
         </div>
@@ -165,7 +164,7 @@
             100%
           </div>
         </div>
-      </div> -->
+      </div>
       <div class="play-button">
         <div class="title">
           title
@@ -189,7 +188,7 @@
         <div class="content">
         </div>
       </div>
-<!--       <div class="onboard-switch">
+      <div class="onboard-switch">
         <div class="title">
           title
         </div>
@@ -202,7 +201,7 @@
             </label>
           </div>
         </div>
-      </div> -->
+      </div>
       <div class="roundbutton">
         <div class="buttonpanel">
           <div class="roundbtn">
