--- a/dressdash/index.html
+++ b/dressdash/index.html
@@ -49,7 +49,7 @@
     <div class="lcar head2"></div>
     <div class="lcar head3"></div>
     <ul class="lcar head4 nav">
-      <li class="nav-item">Connected to: <span id="currentboard"></span></li>
+      <li class="nav-item"><span id="currentboard"></span></li>
       <li class="nav-item"><button id="butConnect" type="button">Connect</button></li>
     </ul>
     <div class="lcar head6"><span class="menuIcon"><svg viewBox="0 0 100 80" width="20" height="20">
