--- a/dressdash/index.html
+++ b/dressdash/index.html
@@ -171,13 +171,13 @@
         </div>
         <div class="content">
           <div class="button button1">
-            <span>1</span>
+            <span>rainbow</span>
           </div>
           <div class="button button2">
-            <span>2</span>
+            <span>strobe</span>
           </div>
           <div class="button button3">
-            <span>3</span>
+            <span>flag</span>
           </div>
         </div>
       </div>
