add all buttons

--- a/dressdash/index.html
+++ b/dressdash/index.html
@@ -186,9 +186,9 @@
         </div>
       </div>
       <div class="play-button">
-        <div class="title">
+        <h1 class="title">
           title
-        </div>
+        </h1>
         <div class="content">
           <div class="button button1">
             <span>rainbow</span>
@@ -198,6 +198,32 @@
           </div>
           <div class="button button3">
             <span>flag</span>
+          </div>
+          <div class="button button4">
+            <span>pulse</span>
+          </div>
+          <div class="button button5">
+            <span>cycle</span>
+          </div>
+        </div>
+        <h1 class="title">
+          Colors
+        </h1>
+        <div class="content2">
+          <div class="button button6">
+            <span>white</span>
+          </div>
+          <div class="button button7">
+            <span>rainbow</span>
+          </div>
+          <div class="button button8">
+            <span>greens</span>
+          </div>
+          <div class="button button9">
+            <span>blue to pink</span>
+          </div>
+          <div class="button button10">
+            <span>starfleet</span>
           </div>
         </div>
       </div>
